[package]
name = "vpnx"
version = "0.3.2"
edition = "2024"
description = "OpenVPN wrapper with native OS credential storage and TOTP/MFA automation, including QR code scanning from screen."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GabrielAhlert/vpn-extended"
homepage = "https://github.com/GabrielAhlert/vpn-extended"
readme = "README.md"
keywords = ["openvpn", "vpn", "totp", "mfa", "keyring"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
ctrlc = "3.4"
fs2 = "0.4"
image = "0.25.10"
keyring = { version = "3.6.3", features = ["windows-native"] }
rpassword = "7.4.0"
rqrr = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.25.0"
totp-rs = { version = "5.7.0", features = ["otpauth"] }
which = "8.0.0"
xcap = "0.9.1"
zeroize = "1.8.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
